--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -125,6 +125,35 @@ li:hover {
 	text-align: center;
 	margin-bottom: 1em;
 }
+
+.filtres {
+	display: flex;
+	margin :0px auto 50px auto;
+	width : 62%;
+	justify-content: space-between;
+}
+
+.boutonFiltre {
+	padding: 0px 20px 0px 20px;
+	height: 37px;
+
+	background: none;
+	border: 1px solid #1D6154;
+	border-radius: 60px;
+	font-family: 'Syne';
+	font-style: normal;
+	font-weight: 700;
+	font-size: 16px;
+	line-height: 19px;
+	text-align: center;
+	color: #1D6154;
+}
+
+.boutonFiltre:hover {
+	background: #1D6154;
+	color: #FFFFFF;
+}
+
 .gallery {
 	width: 100%;
 	display: grid;
