--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -166,34 +166,34 @@ li:hover {
 	width: 100%;
 
 }
-#contact {
+#contact, #connexion {
 	width: 50%;
-margin: auto;
+	margin: auto;
 }
-#contact > * {
+#contact, #connexion > * {
 	text-align: center;
 
 }
-#contact h2{
+#contact h2, #connexion h2{
 	margin-bottom: 20px;
 }
-#contact form {
+#contact form, #connexion form  {
 	text-align: left;
 	margin-top:30px;
 	display: flex;
 	flex-direction: column;
 }
 
-#contact input {
+#contact input, #connexion input {
 	height: 50px;
 	font-size: 1.2em;
 	border: none;
 	box-shadow: 0px 4px 14px rgba(0, 0, 0, 0.09);
 }
-#contact label {
+#contact label, #connexion label {
 	margin: 2em 0 1em 0;
 }
-#contact textarea {
+#contact textarea, #contact textarea {
 	border: none;
 	box-shadow: 0px 4px 14px rgba(0, 0, 0, 0.09);
 }
@@ -212,6 +212,22 @@ input[type="submit"]{
 footer nav ul {
 	display: flex;
 	justify-content: flex-end;
-	margin: 2em
+	margin: 2em;
 }
 
+#mdpOublie {
+	text-align: center;
+	text-decoration: underline;
+}
+
+.edition {
+	display: flex;
+}
+
+.lien-logo, .lien-entete {
+	text-decoration: none;
+}
+
+.lien-entete {
+	color : black;
+}
