--- a/FrontEnd/assets/modale.css
+++ b/FrontEnd/assets/modale.css
@@ -1,5 +1,4 @@
-.modale {
-
+#arriere-modale {
     position:fixed;
     display: flex;
     align-items: center;
@@ -11,13 +10,13 @@
     background: rgba(0, 0, 0, 0.3);
 }
 
-.divmodale {
+.fenetre-modale {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    width : 44%;
+    width : 40%;
     max-width : 650px;
-    padding : 4% 6% 4% 6%; 
+    padding : 6% 6% 6% 6%; 
 
     background: #FFFFFF;
     border-radius: 10px;
@@ -47,18 +46,18 @@
     line-height: 17px;
     text-align: center;
     color: #FFFFFF;
+    cursor: pointer;
 }
 
-#divbouton-modale {
+#division-bouton-modale-projets {
     display: flex;
     justify-content: center;
-    padding-top : 38px;
-    margin-bottom : 23px;
+    padding-top : 30px;
+    margin-bottom : 20px;
     border-top: 1px solid #B3B3B3;
-
 }
 
-#suppression-galerie {
+#bouton-suppression-galerie {
     margin : auto;
     text-decoration: none;
     font-family: 'Syne';
@@ -70,14 +69,20 @@
     color: #D65353;
 }
 
-#bouton-fermer {
+#icone-modale-projets {
     display: flex;
     justify-content: right;
     text-decoration: none;
 }
 
+#icones-modale-ajout {
+    display: flex;
+    justify-content: space-between;
+    text-decoration: none;
+}
+
 #galerie-modale {
-    margin-bottom : 67px;
+    margin-bottom : 40px;
 	width: 100%;
 	display: grid;
 	grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
@@ -87,4 +92,97 @@
 
 #galerie-modale img {
 	width: 100%;
+}
+
+.fa-trash-can {
+    position : absolute;
+    top : 10px;
+    right : 10px;
+    padding : 5px;
+    color: #FFFFFF;
+    background: #000000;
+    border-radius: 20%;
+}
+
+#formulaire-ajout {
+    display: flex;
+	flex-direction: column;
+}
+
+#champs-input {
+    display: flex;
+	flex-direction: column;
+
+    padding-bottom : 40px; 
+    border-bottom: 1px solid #B3B3B3;
+}
+
+#champs-input label {
+    margin-top : 20px;
+    font-family: 'Work Sans';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 16px;
+    color: #3D3D3D;
+}
+
+.fa-image {
+    color: #B9C5CC;
+    margin : 40px auto 20px auto;
+}
+
+#carre-bleu {
+    background: #E8F1F7;
+    border-radius: 3px;
+}
+
+#ajout-image {
+    display: flex;
+    flex-direction: column;
+    /*justify-content : center ne marche pas */
+    justify-content: center;
+}
+
+#ajout-image p {
+    width : auto;
+    margin : 0 auto 20px auto;
+}
+
+#image {
+    width: 50%;
+    margin: 10px auto;
+    color: #306685;
+    background: #CBD6DC;
+}
+
+#division-preview-image {
+    display: flex;
+    max-height : 300px;
+    justify-content: center; 
+}
+
+#preview-image {
+    width : 33%;
+    object-fit : cover;
+}
+
+#title, #category {
+    height: 50px;
+    margin : 5px 0 10px 0;
+
+    font-family: 'Work Sans';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 16px;
+    color: #444444;
+    border: none;
+    box-shadow: 0px 4px 14px rgba(0, 0, 0, 0.09);
+}
+
+#bouton-modale-ajout {
+    margin-top : 30px;
+    background: #A7A7A7;
+    cursor: pointer;
 }
